--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,7 +7,6 @@
     <title>Vite + Vue</title>
   </head>
   <body>
-    <h1 class="title">缩短链接</h1>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
