--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Vite + Vue</title>
   </head>
   <body>
+    <div class="title">测试</div>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
